# Lightweight-WebAssembly-Native-Edge-Router

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/plugin-sdk/: Cargo.toml
crates/plugin-sdk/src/: lib.rs
crates/router-core/: Cargo.toml
crates/router-core/src/: lib.rs
crates/stellar-integration/: Cargo.toml
crates/stellar-integration/src/: lib.rs
crates/wasm-runtime/: Cargo.toml
crates/wasm-runtime/src/: lib.rs
examples/hello-plugin/: Cargo.toml
examples/hello-plugin/src/: lib.rs
