[workspace]
resolver = "2"
members = [
    "crates/router-core",
    "crates/wasm-runtime",
    "crates/plugin-sdk",
    "crates/stellar-integration",
    "crates/config",
    "examples/hello-plugin",
]

[workspace.package]
version     = "0.1.0"
edition     = "2021"
license     = "MIT"
repository  = "https://github.com/your-org/wasm-edge-router"

[workspace.dependencies]
# async runtime
tokio       = { version = "1.37", features = ["full"] }
# HTTP
hyper       = { version = "1.3", features = ["full"] }
http        = "1.1"
# WASM runtime
wasmtime    = "21.0"
# serialization
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
toml        = "0.8"
# error handling
anyhow      = "1.0"
thiserror   = "1.0"
# logging
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Stellar SDK (horizon + soroban)
stellar-sdk = { version = "0.8", optional = true }
