[package]
name    = "router-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio.workspace     = true
hyper.workspace     = true
http.workspace      = true
anyhow.workspace    = true
thiserror.workspace = true
tracing.workspace   = true
serde.workspace     = true

config              = { path = "../config" }
wasm-runtime        = { path = "../wasm-runtime" }
